# qfiletest

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  qfile_test_en_US.ts  qfiletest_en_US.ts
src/cxx/: MainWindow.cpp  main.cpp
src/cxx/qft/core/utils/io/: ICheckData.hxx
src/qml/: main.qml
